--- a/requirements.txt
+++ b/requirements.txt
@@ -1,376 +1,42 @@
-aeidon==1.10.1
-aiohttp==3.9.1
-aiosignal==1.3.1
-alembic==1.13.1
-altair==5.2.0
-amqp==5.2.0
-aniso8601==9.0.1
-annotated-types==0.6.0
-anyio==4.2.0
-apache-airflow-providers-celery==3.5.1
-apache-airflow-providers-common-io==1.2.0
-apache-airflow-providers-common-sql==1.10.0
-apache-airflow-providers-ftp==3.7.0
-apache-airflow-providers-http==4.8.0
-apache-airflow-providers-imap==3.5.0
-apache-airflow-providers-sqlite==3.7.0
-apispec==6.4.0
-apt-xapian-index==0.49
-argcomplete==3.2.1
-asgiref==3.7.2
-asttokens==2.4.1
-attrs==23.2.0
-Automat==20.2.0
-Babel==2.14.0
-backoff==2.2.1
-bcc==0.18.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-billiard==4.2.0
-blinker==1.7.0
-Brlapi==0.8.3
-build==1.0.3
-CacheControl==0.13.1
-cachelib==0.9.0
-cachetools==5.3.2
-category-encoders==2.6.3
-cclib==1.6.2
-celery==5.3.6
-certifi==2023.11.17
-cffi==1.16.0
-chardet==4.0.0
+altair==5.4.1
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
 charset-normalizer==3.3.2
-chrome-gnome-shell==0.0.0
-cleo==2.1.0
 click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-clickclick==20.10.2
-cloudpickle==3.0.0
-colorama==0.4.6
-coloredlogs==14.0
-colorlog==4.8.0
-comm==0.2.1
-command-not-found==0.3
-ConfigUpdater==3.2
-connexion==2.14.2
-constantly==15.1.0
-contourpy==1.2.0
-crashtest==0.4.1
-cron_descriptor==1.4.0
-croniter==2.0.1
-cryptography==41.0.7
-cupshelpers==1.0
-cycler==0.12.1
-Cython==3.0.8
-dagster==1.6.9
-dagster-graphql==1.6.9
-dagster-pipes==1.6.9
-dagster-webserver==1.6.9
-dash==2.15.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dbus-python==1.2.18
-debugpy==1.8.1
-decorator==5.1.1
-defer==1.0.6
-Deprecated==1.2.14
-deprecation==2.1.0
-diff-match-patch==20200713
-dill==0.3.1.1
-distlib==0.3.8
-distro==1.7.0
-dnspython==2.4.2
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-docstring-parser==0.15
-docutils==0.20.1
-dulwich==0.21.7
-email-validator==1.3.1
-evdev==1.4.0
-executing==2.0.1
-fastjsonschema==2.19.1
-filelock==3.13.1
-Flask==2.2.5
-Flask-AppBuilder==4.3.10
-Flask-Babel==2.0.0
-Flask-Caching==2.1.0
-Flask-JWT-Extended==4.6.0
-Flask-Limiter==3.5.0
-Flask-Login==0.6.3
-Flask-Session==0.5.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.2.1
-flower==2.0.1
-fonttools==4.48.1
-frozenlist==1.4.1
-fsspec==2023.12.2
-fuse-python==1.0.2
 gitdb==4.0.11
-GitPython==3.1.41
-google-re2==1.1
-googleapis-common-protos==1.62.0
-gpg==1.16.0
-gql==3.5.0
-graphene==3.3
-graphql-core==3.2.3
-graphql-relay==3.2.0
-greenlet==3.0.3
-grpcio==1.62.0
-grpcio-health-checking==1.62.0
-gunicorn==21.2.0
-h11==0.14.0
-hidpidaemon==18.4.6
-html5lib==1.1
-httpcore==0.16.3
-httplib2==0.20.2
-httptools==0.6.1
-httpx==0.23.3
-humanfriendly==10.0
-humanize==4.9.0
-hyperlink==21.0.0
-idna==3.6
-imbalanced-learn==0.12.0
-importlib-metadata==6.11.0
-importlib-resources==5.13.0
-incremental==21.3.0
-inflection==0.5.1
-iniparse==0.4
-installer==0.7.0
-ipykernel==6.29.3
-ipython==8.21.0
-ipywidgets==8.1.2
-itsdangerous==2.1.2
-jaraco.classes==3.3.0
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.3
-joblib==1.3.2
-jsonschema==4.20.0
+GitPython==3.1.43
+idna==3.10
+Jinja2==3.1.4
+jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.1
-jupyterlab_widgets==3.0.10
-kaleido==0.2.1
-kernelstub==3.1.4
-keyring==24.3.0
-kiwisolver==1.4.5
-kombu==5.3.5
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy-object-proxy==1.10.0
-lightgbm==4.3.0
-limits==3.7.0
-linkify-it-py==2.0.2
-llvmlite==0.42.0
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.8.0
-macaroonbakery==1.3.1
-Mako==1.3.0
-Markdown==3.5.2
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.2
-marshmallow-oneofschema==3.0.1
-marshmallow-sqlalchemy==0.26.1
-matplotlib==3.6.0
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.4.0
+MarkupSafe==2.1.5
 mdurl==0.1.2
-more-itertools==8.10.0
-mpire==2.9.0
-msgpack==1.0.7
-multidict==6.0.4
-nbformat==5.9.2
-nest-asyncio==1.6.0
-netaddr==0.8.0
-netifaces==0.11.0
-numba==0.59.0
-numpy==1.25.2
-oauthlib==3.2.0
-olefile==0.46
-opentelemetry-api==1.22.0
-opentelemetry-exporter-otlp==1.22.0
-opentelemetry-exporter-otlp-proto-common==1.22.0
-opentelemetry-exporter-otlp-proto-grpc==1.22.0
-opentelemetry-exporter-otlp-proto-http==1.22.0
-opentelemetry-proto==1.22.0
-opentelemetry-sdk==1.22.0
-opentelemetry-semantic-conventions==0.43b0
-ordered-set==4.1.0
-orjson==3.9.13
-packaging==23.2
-pandas==1.5.3
-parso==0.8.3
-pathspec==0.12.1
-patsy==0.5.6
-pendulum==3.0.0
-pexpect==4.9.0
-phply==1.2.5
-pillow==10.2.0
-pkginfo==1.9.6
-platformdirs==3.11.0
-plotly==5.18.0
-plotly-resampler==0.9.2
-pluggy==1.3.0
-ply==3.11
-pmdarima==2.0.4
-poetry==1.7.1
-poetry-core==1.8.1
-poetry-plugin-export==1.6.0
-pop-transition==1.1.2
-prison==0.2.1
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-protobuf==4.25.2
-psutil==5.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==15.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycairo==1.20.1
-pycaret==3.2.0
-pycountry==20.7.3
-pycparser==2.21
-pycups==2.0.1
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydbus==0.6.0
-pydeck==0.8.1b0
-pyenchant==3.2.0
-Pygments==2.17.2
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.8.0
-pylibacl==0.6.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyod==1.1.3
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyproject_hooks==1.0.0
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-pyRFC3339==1.1
-pyrsistent==0.18.1
-python-apt==2.4.0+ubuntu4
-python-daemon==3.0.1
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==0.19.2
-python-gnupg==0.4.8
-python-Levenshtein==0.12.2
-python-magic==0.4.24
-python-nvd3==0.15.0
-python-slugify==8.0.1
-python-xlib==0.29
-pytz==2023.3.post1
-pyxattr==0.7.2
-pyxdg==0.27
-PyYAML==6.0.1
-pyzmq==25.1.2
-rapidfuzz==3.6.1
-referencing==0.32.1
-repolib==2.2.1
-repoman==1.4.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rich==13.7.0
-rich-argparse==1.4.0
-rpds-py==0.17.1
-ruamel.yaml==0.17.16
-ruamel.yaml.clib==0.2.6
-schemdraw==0.15
-scikit-base==0.5.2
-scikit-learn==1.2.2
-scikit-plot==0.3.7
-scipy==1.10.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-service-identity==18.1.0
-sessioninstaller==0.0.0
-setproctitle==1.3.3
-shellingham==1.5.4
-simplejson==3.17.6
+narwhals==1.8.4
+numpy==2.1.1
+opencv-python==4.10.0.84
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+protobuf==5.28.2
+pyarrow==17.0.0
+pydeck==0.9.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.8.1
+rpds-py==0.20.0
 six==1.16.0
-sktime==0.21.1
 smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.3.1
-SQLAlchemy==1.4.51
-SQLAlchemy-JSONField==1.0.2
-SQLAlchemy-Utils==0.41.1
-sqlparse==0.4.4
-ssh-import-id==5.11
-stack-data==0.6.3
-starlette==0.37.2
-statsmodels==0.14.1
-streamlit==1.31.0
-structlog==24.1.0
-systemd-python==234
-tabulate==0.9.0
-tbats==1.1.3
-tenacity==8.2.3
-termcolor==2.4.0
-text-unidecode==1.3
-texttable==1.6.4
-threadpoolctl==3.2.0
-time-machine==2.13.0
+streamlit==1.38.0
+tenacity==8.5.0
 toml==0.10.2
-tomli==2.0.1
-tomlkit==0.12.3
-toolz==0.12.1
-toposort==1.10
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.1
-translate-toolkit==3.6.0
-trove-classifiers==2023.11.29
-tsdownsample==0.1.2
-Twisted==22.1.0
-typing_extensions==4.9.0
-tzdata==2023.4
-tzlocal==5.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-uc-micro-py==1.0.2
-ufw==0.36.1
-unicodecsv==0.14.1
-universal-pathlib==0.1.4
-urllib3==1.26.18
-uvicorn==0.27.1
-uvloop==0.19.0
-validators==0.22.0
-vine==5.1.0
-virtualenv==20.25.0
-vobject==0.9.6.1
-wadllib==1.3.6
-watchdog==4.0.0
-watchfiles==0.21.0
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.2.3
-websockets==12.0
-Werkzeug==2.2.3
-widgetsnbextension==4.0.10
-wrapt==1.16.0
-WTForms==3.1.2
-wurlitzer==3.0.3
-xdg==5
-xkit==0.0.0
-xxhash==3.4.1
-yarl==1.9.4
-yellowbrick==1.5
-zipp==3.17.0
-zope.interface==5.4.0
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==4.0.2
